complete(90%) calculator beginer for moblie subject

--- a/app/src/main/res/layout/activity_calulator_main.xml
+++ b/app/src/main/res/layout/activity_calulator_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:gravity="center_vertical"
         android:padding="5dp"
-        android:text="22+10+55"
+        android:text=""
         android:textAlignment="textEnd"
         android:textSize="20sp"
         android:typeface="normal"
@@ -227,7 +227,7 @@
         android:layout_marginStart="8dp"
         android:gravity="center_vertical"
         android:padding="5dp"
-        android:text="22"
+        android:text=""
         android:textAlignment="textEnd"
         android:textSize="40sp"
         android:textStyle="bold"
