Asssigment5 เพิ่มปุ่มบนเมนูบา กดแล้วเปลี่ยนธีม แต่ ที่แสดง input หายไป

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorPINK">#d301ef</color>
+    <color name="colorGREEN">#50c535</color>
+    <color name="colorORG">#cc5514</color>
+
 </resources>
